force-app/main/default/objects/Visit/fields/MillTour__c.field-meta.xml
<CustomField>
    <fullName>MillTour__c</fullName>  
    <defaultValue>false</defaultValue>
    <label>Mill Tour</label> 
    <type>Checkbox</type>
</CustomField>