force-app/main/default/objects/Visit/fields/NextSteps__c.field-meta.xml
<CustomField>
    <fullName>NextSteps__c</fullName>   
    <label>Next Steps</label> 
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>