force-app/main/default/objects/Visit/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>   
    <label>Schedule</label> 
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>