force-app/main/default/objects/Visit/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>  
    <formula>TEXT(Account.Segment1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label> 
    <type>Text</type>
</CustomField>