force-app/main/default/objects/Visit/fields/SuccessorAccount__c.field-meta.xml
<CustomField>
    <fullName>SuccessorAccount__c</fullName>  
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Successor Account</label> 
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Predecessor Visits</relationshipLabel>
    <relationshipName>PredecessorVisits</relationshipName>
    <type>Lookup</type>
</CustomField>