force-app/main/default/objects/Visit/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>  
    <label>Summary</label>  
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>