force-app/main/default/objects/Visit/fields/VisitBA__c.field-meta.xml
<CustomField>
    <fullName>VisitBA__c</fullName>  
    <formula>IF( ISPICKVAL( BusinessArea__c, &quot;ZK&quot; ), &quot;Cold Heading; &quot;,null ) &amp;
IF ( ISPICKVAL ( BusinessArea__c , &quot;ZF&quot; ), &quot;Spring Steel; &quot;,null ) &amp;
IF ( ISPICKVAL ( BusinessArea__c, &quot;ZS&quot; ), &quot;Free Cutting Steel (SZO); &quot;,null ) &amp;
IF ( ISPICKVAL ( BusinessArea__c, &quot;ZW&quot; ), &quot;Bearing Steel; &quot;,null ) &amp;
IF ( ISPICKVAL ( BusinessArea__c, &quot;ZM&quot; ), &quot;Forging Steel; &quot;,null ) &amp;
IF ( ISPICKVAL ( BusinessArea__c, &quot;ZZ&quot; ), &quot;Drawing Grades; &quot;,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VisitBA</label> 
    <type>Text</type>
</CustomField>