force-app/main/default/objects/Visit/fields/VisitDateStart__c.field-meta.xml
<CustomField>
    <fullName>VisitDateStart__c</fullName>  
    <label>Visit Date Start</label> 
    <type>Date</type>
</CustomField>