force-app/main/default/objects/Visit/fields/VisitLocation__c.field-meta.xml
<CustomField>
    <fullName>VisitLocation__c</fullName>  
    <label>Visit Location</label>  
    <type>Address</type>
</CustomField>