force-app/main/default/objects/Visit/listViews/All_Visit.listView-meta.xml
<ListView>
    <fullName>All_Visit</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>VisitPriority</columns>
    <columns>Account</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>